Atualizações no carousel de imagens , clientes e projetos

--- a/components/parceiros/style.css
+++ b/components/parceiros/style.css
@@ -33,6 +33,11 @@
   background-color: #fff;
 }
 
+.carousel-container .parceiro-card:nth-child(3) > a {
+  background-color: #000 !important;
+}
+
+
 .parceiro-logo {
   width: 100%;
   height: auto;
@@ -73,6 +78,7 @@
 .carousel-button.right {
   right: 0;
 }
+
 
 
 
